--- a/pom.xml
+++ b/pom.xml
@@ -9,15 +9,26 @@
     <version>1.0-SNAPSHOT</version>
 
     <build>
+        <directory>de.htwg.se.wizard/bin</directory>
         <sourceDirectory>de.htwg.se.wizard/src/main</sourceDirectory>
         <testSourceDirectory>de.htwg.se.wizard/src/test</testSourceDirectory>
+        <resources>
+            <resource>
+                <directory>de.htwg.se.wizard/src/main/resource</directory>
+            </resource>
+        </resources>
+        <testResources>
+            <testResource>
+                <directory>de.htwg.se.wizard/src/test/resource</directory>
+            </testResource>
+        </testResources>
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
                 <configuration>
-                    <source/>
-                    <target/>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
         </plugins>
