--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id "org.sonarqube" version "1.0"
+    id "org.sonarqube" version "1.1"
 }
 
 repositories {
@@ -10,6 +10,7 @@ apply plugin: "java"
 apply plugin: "idea"
 apply plugin: "sonar-runner"
 apply plugin: "org.sonarqube"
+apply plugin: "eclipse"
 apply plugin: "maven"
 apply plugin: "jacoco"
 
@@ -24,12 +25,13 @@ dependencies {
     compile group: 'org.apache.logging.log4j', name: 'log4j-api',  version: '2.2'
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.2'
     compile group: 'com.google.inject',        name: 'guice',      version: '3.0'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.6.3'
     testCompile "junit:junit:4.11"
 }
 
 sourceSets {
-    main.java.srcDir "de.htwg.se.wizard.src"
-    test.java.srcDir "de.htwg.se.wizard.test"
+    main.java.srcDir "src/main"
+    test.java.srcDir "src/test"
 }
 
 jar {
@@ -42,7 +44,7 @@ sonarqube {
         property "sonar.projectName", "SE2015WS-18-Wizard"
         property "sonar.projectKey", "de.htwg.se.wizard"
         property "sonar.projectVersion", "1.0"
-        property "sonar.binaries", "build/classes"
+        property "sonar.binaries", "bin/classes"
         property "sonar.java.coveragePlugin", "jacoco"
     }
 }
