--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,7 @@ sonarqube {
         property "sonar.projectName", "SE2015WS-18-Wizard"
         property "sonar.projectKey", "de.htwg.se.wizard"
         property "sonar.projectVersion", "1.0"
-        property "sonar.binaries", "bin"
+        property "sonar.binaries", "de.htwg.se.wizard/bin"
         property "sonar.java.coveragePlugin", "jacoco"
     }
 }
