change project struct

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,18 +1,18 @@
 # required metadata
 
-sonar.projectKey=de.htwg.se.wizard
+sonar.projectKey=de.htwg.se.java.wizard
 sonar.projectName=Wizard
 sonar.projectVersion=1.0
  
 # path to source directories (required)
 
-sonar.sources=./de.htwg.se.wizard/src/main
+sonar.sources=./de.htwg.se.java.wizard/src/main
  
 # path to test source directories (optional)
-sonar.tests=./de.htwg.se.wizard/src/test
+sonar.tests=./de.htwg.se.java.wizard/src/test
  
 # path to project binaries (optional), for example directory of Java bytecode
-sonar.binaries=./de.htwg.se.wizard/bin
+sonar.binaries=./de.htwg.se.java.wizard/bin
 
 # optional comma-separated list of paths to libraries. Only path to JAR file and path to directory of classes are supported.
 #sonar.libraries=path/to/library.jar,path/to/classes/dir
