--- a/build.gradle
+++ b/build.gradle
@@ -21,30 +21,31 @@ idea {
     }
 }
 
+
 dependencies {
     compile group: 'org.apache.logging.log4j', name: 'log4j-api',  version: '2.2'
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.2'
-    compile group: 'com.google.inject',        name: 'guice',      version: '3.0'
+    compile group: 'com.google.inject',        name: 'guice',      version: '4.0'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.6.3'
-    testCompile "junit:junit:4.11"
+    testCompile "junit:junit:4.12"
 }
 
 sourceSets {
-    main.java.srcDir "de.htwg.se.wizard/src/main"
-    test.java.srcDir "de.htwg.se.wizard/src/test"
+    main.java.srcDir "/src/main/de.htwg.se"
+    test.java.srcDir "/src/test/de.htwg.se"
 }
 
 jar {
-    manifest.attributes "Main-Class":"de.htwg.se.wizard"
+    manifest.attributes "Main-Class":"de.htwg.se"
 }
 
 
 sonarqube {
     properties {
         property "sonar.projectName", "SE2015WS-17-Wizard"
-        property "sonar.projectKey", "de.htwg.se.wizard"
+        property "sonar.projectKey", "de.htwg.se"
         property "sonar.projectVersion", "1.0"
-        property "sonar.binaries", "de.htwg.se.wizard/bin"
+        property "sonar.binaries", "de.htwg.se.java.wizard/bin"
         property "sonar.java.coveragePlugin", "jacoco"
     }
 }
