--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,7 @@ sonarqube {
         property "sonar.projectName", "SE2015WS-17-Wizard"
         property "sonar.projectKey", "de.htwg.se"
         property "sonar.projectVersion", "1.0"
-        property "sonar.binaries", "/bin"
+        property "sonar.binaries", "./bin"
         property "sonar.java.coveragePlugin", "jacoco"
     }
 }
