--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,7 +12,7 @@ sonar.sources=./de.htwg.se.java.wizard/src/main
 sonar.tests=./de.htwg.se.java.wizard/src/test
  
 # path to project binaries (optional), for example directory of Java bytecode
-sonar.binaries=./bin
+sonar.binaries=/bin
 
 # optional comma-separated list of paths to libraries. Only path to JAR file and path to directory of classes are supported.
 #sonar.libraries=path/to/library.jar,path/to/classes/dir
