--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,10 +6,10 @@ sonar.projectVersion=1.0
  
 # path to source directories (required)
 
-sonar.sources=./de.htwg.se.java.wizard/src/main
+sonar.sources=./src/main/de.htwg.se.java
  
 # path to test source directories (optional)
-sonar.tests=./de.htwg.se.java.wizard/src/test
+sonar.tests=./src/test/de.htwg.se.java
  
 # path to project binaries (optional), for example directory of Java bytecode
 sonar.binaries=/bin
