solve sonar.binaries path

--- a/build.gradle
+++ b/build.gradle
@@ -43,9 +43,9 @@ jar {
 sonarqube {
     properties {
         property "sonar.projectName", "SE2015WS-17-Wizard"
-        property "sonar.projectKey", "de.htwg.se.java.wizard"
+        property "sonar.projectKey", "de.htwg.se"
         property "sonar.projectVersion", "1.0"
-        property "sonar.binaries", "/bin"
+        property "sonar.binaries", "./bin"
         property "sonar.java.coveragePlugin", "jacoco"
     }
 }
