--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,8 @@ jar {
 sonarqube {
     properties {
         property "sonar.projectName", "SE2015WS-17-Wizard"
+        property "sonar.projectKey", "de.htwg.se.java.wizard"
+        property "sonar.binaries", "./bin"
 
         property "sonar.projectVersion", "1.0"
         property "sonar.java.coveragePlugin", "jacoco"
