--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,7 @@ sonarqube {
     properties {
         property "sonar.projectName", "SE2015WS-17-Wizard"
         property "sonar.projectKey", "de.htwg.se.java.wizard"
-        property "sonar.binaries", "./bin"
+        property "sonar.binaries", "/bin"
 
         property "sonar.projectVersion", "1.0"
         property "sonar.java.coveragePlugin", "jacoco"
