--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,6 @@ repositories {
 
 apply plugin: "java"
 apply plugin: "idea"
-apply plugin: "sonar-runner"
 apply plugin: "org.sonarqube"
 apply plugin: "eclipse"
 apply plugin: "maven"
@@ -43,7 +42,7 @@ jar {
 sonarqube {
     properties {
         property "sonar.projectName", "SE2015WS-17-Wizard"
-        property "sonar.projectKey", "de.htwg.se.java.wizard"
+        property "sonar.projectKey", "de.htwg.se"
         property "sonar.binaries", "/bin"
 
         property "sonar.projectVersion", "1.0"
