--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,7 @@ sonarqube {
     properties {
         property "sonar.projectName", "SE2015WS-17-Wizard"
         property "sonar.projectKey", "de.htwg.se"
-        property "sonar.binaries", "/bin"
+        property "sonar.binaries", "build/classes"
 
         property "sonar.projectVersion", "1.0"
         property "sonar.java.coveragePlugin", "jacoco"
