solve sonar.binaries path

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
-systemProp.sonar.host.url=http://lenny2.in.htwg-konstanz.de:9000
+systemProp.sonar.host.url=http://lenny2.in.htwg-konstanz.java.java.de:9000
 
 #----- Security (when 'sonar.forceAuthentication' is set to 'true')
-systemProp.sonar.jdbc.url=jdbc:mysql://lenny2.in.htwg-konstanz.de:3306/sonar?useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true&useConfigs=maxPerformance
+systemProp.sonar.jdbc.url=jdbc:mysql://lenny2.in.htwg-konstanz.java.java.de:3306/sonar?useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true&useConfigs=maxPerformance
 systemProp.sonar.jdbc.username=sonar
 systemProp.sonar.jdbc.password=mysql
 systemProp.sonar.login=admin
