--- a/build.gradle
+++ b/build.gradle
@@ -30,19 +30,19 @@ dependencies {
 }
 
 sourceSets {
-    main.java.srcDir "/src/main/de.htwg.se"
-    test.java.srcDir "/src/test/de.htwg.se"
+    main.java.srcDir "/src/main/java.java.de.htwg.se"
+    test.java.srcDir "/src/test/java.java.de.htwg.se"
 }
 
 jar {
-    manifest.attributes "Main-Class":"de.htwg.se"
+    manifest.attributes "Main-Class":"java.java.de.htwg.se"
 }
 
 
 sonarqube {
     properties {
         property "sonar.projectName", "SE2015WS-17-Wizard"
-        property "sonar.projectKey", "de.htwg.se"
+        property "sonar.projectKey", "de.htwg.se.wizard"
         property "sonar.binaries", "build/classes"
 
         property "sonar.projectVersion", "1.0"
