--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,18 +1,18 @@
 # required metadata
 
-sonar.projectKey=de.htwg.se
+sonar.projectKey=de.htwg.se.wizard
 sonar.projectName=SE2015WS-17-Wizard
 sonar.projectVersion=1.0
  
 # path to source directories (required)
 
-sonar.sources=./src/main/de.htwg.se
+sonar.sources=./src/main/java
  
 # path to test source directories (optional)
-sonar.tests=./src/test/de.htwg.se
+sonar.tests=./src/test/java
  
 # path to project binaries (optional), for example directory of Java bytecode
-sonar.binaries=./bin
+#sonar.binaries=./bin
 
 # optional comma-separated list of paths to libraries. Only path to JAR file and path to directory of classes are supported.
 #sonar.libraries=path/to/library.jar,path/to/classes/dir
