--- a/build.gradle
+++ b/build.gradle
@@ -31,12 +31,12 @@ dependencies {
 }
 
 sourceSets {
-    main.java.srcDir "src/main"
-    test.java.srcDir "src/test"
+    main.java.srcDir "src/main/java"
+    test.java.srcDir "src/test/java"
 }
 
 jar {
-    manifest.attributes "Main-Class":"java.de.htwg.se.wizard"
+    manifest.attributes "Main-Class":"de.htwg.se.wizard"
 }
 
 
