Try to get build.gradle build in jenkins with log4j

--- a/build.gradle
+++ b/build.gradle
@@ -23,8 +23,8 @@ idea {
 
 
 dependencies {
-    compile group: 'org.apache.logging.log4j', name: 'log4j-api',  version: '2.2'
-    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.2'
+    compile group: 'org.apache.log4j', name: 'log4j-api',  version: '2.2'
+    compile group: 'org.apache.log4j', name: 'log4j-core', version: '2.2'
     compile group: 'com.google.inject',        name: 'guice',      version: '4.0'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.6.3'
     testCompile "junit:junit:4.12"
